# routes/users.js
@@ -14,7 +14,7 @@ router.delete('/:id', usersController.deleteUser);
 router.post('/:id/tasks', tasksController.createTask);
 router.get('/:id/tasks', tasksController.getAllTasks);
 router.get('/:id/tasks/:taskId', tasksController.getTaskById);
-router.put('/:id/tasks/:taskId', tasksController.updateTask);
-router.delete('/:id/tasks/:taskId', tasksController.deleteTask);
+router.put('/tasks/:taskId', tasksController.updateTask);
+router.delete('/tasks/:taskId', tasksController.deleteTask);
 
 module.exports = router;
